k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: payment-backend-dev
  namespace: payment-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-backend-label
  template:
    metadata:
      labels:
        app: payment-backend-label
    spec:
      containers:
        - name: payment-backend-con
          image: suryasuraj/payment-server:latest
          ports:
            - containerPort: 7000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
